# Auto_Resonance

./: .gitignore  .pdm-python  .pylintrc  README.md  changelog_generator.js  commit_templates.json  config.json  demo.py  diff_folder.py  folder_diff.py  gui.py  main.py  nemu.py  nemu.pyi  pyproject.toml  requirements.txt  test_gui.py  updater.py  version.py
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  route_bug.yml
.github/workflows/: 1.build_release.yml  build_release.yml  greetings.yml  mirrorchyan_release_note.yml  mirrorchyan_uploading.yml  stale.yml  up_requirement.yml
actions/: start.json
actions/tasks/: attack_railway_safety_bureau.json  buy_huashitou.json  join_railway_safety_bureau.json  join_rest_area.json  railway_safety_bureau_attack.json  test.json  test_attack.json
app/common/: config.py  running_business_config.py  signal_bus.py  style_sheet.py  translator.py  trie.py  utils.py  worker.py
app/components/: button_card.py  combo_box_title_card.py  line_edit_card.py  line_edit_setting_card.py  link_card.py  primary_push_load_card.py  sample_card.py  tab_widget.py  text_button_card.py  tip_bar.py  update_message_box.py
app/config/: config.json
app/utils/: config.py  constants.py  file.py  utils.py  worker.py
app/view/: adb_data_interface.py  daily_task_interface.py  home_interface.py  logger_interface.py  main_window.py  running_business_interface.py  setting_interface.py  taj_interface.py  this_road_that_interface.py  two_city_run_business_interface.py
auto/: __init__.py
auto/carbonated_water/: main.py
auto/huashi/: main.py
auto/module/: strength.py
auto/railway_safety_bureau/: main.py
auto/rest_area/: main.py
auto/run_business/: __init__.py  buy.py  main.py  sell.py
auto/scan_res_level/: __init__.py  main.py
auto/this_road_that/: __init__.py  attack_boss.py  transport_order.py
core/: adb.py  analysis_tasks.py  exception_handling.py  exceptions.py  image.py  logger.py  ocr.py  utils.py
core/adb/: adb.py  adb_port.py  (+2 more)
gui/: gui.py
tests/: call.py  exception_handling.py  get_pos.py  map_ocr.py  match.py  ocr.py  only_white.py  station_ocr.py  store_goods.py  store_ocr.py  test.py  test_match_template.py  test_ocr.py  test_one.py
tools/: color_area.py  color_area2.py  get_pos.py  match_template.py  ocr.py  only_hsv.py  only_white.py
(+95 files in other folders)
